# NitroSense-Linux

./: .gitignore  LICENSE  README.md  install-app.sh  install-permissions.sh  package-lock.json  package.json
src/: fonts.css  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  wmi.rs
