[package]
name = "nitrosense-linux"
version = "0.1.0"
description = "Fan, RGB and system monitor for Acer Nitro laptops on Linux"
authors = ["thephenominal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Required by tauri-build for code generation. The lib contains no application logic.
name = "nitrosense_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
sysinfo = "0.30"
