[package]
name = "nitrosense-linux"
version = "0.1.0"
description = "Fan, RGB and system monitor for Acer Nitro laptops on Linux"
authors = ["Negi Himanshu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
